Add and configure purge-css for prod enviornments
TailwindCSS adds about 50k lines of styles. I use a few less than that,
so this package should clear up those unused styles. Followed using this
[tutorial][tut]

[tut]: https://tailwindcss.com/docs/controlling-file-size/#setting-up-purgecss-manually

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://danfrenette.github.io/another-personal-site",
+  "homepage": "https://danfrenette.com",
   "name": "another-personal-site",
   "version": "0.1.0",
   "private": true,
@@ -48,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^2.3.0"
   }
 }
